# Portfoli

./: Dockerfile  README.md  railway.toml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: index.html  script.js  style.css
